<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_hall_of_fame"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/hall_of_fame"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/my_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_success_stories"
        android:title="@string/success_stories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_admin_dashboard"
        android:title="@string/admin_dashboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>